@@ -1,4 +1,3 @@
-Remove deprecated HypothesisTest::(Partial|Full)Regression
 Remove deprecated OptimizationProblem(levelFunction, levelValue) ctor
 Remove deprecated (Linear|Quadratic)(LeastSquares|Taylor)::getResponseSurface
 Remove deprecated VisualTest::DrawEmpiricalCDF,DrawHistogram,DrawClouds
